--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 <div class="value">
                     <small>0</small>pesos
                 </div>
+
+                <div class="input2">
+                    <div class="add-expense"><img src="icon/plus.png" alt=""></div>
+                </div>
             </div>
             
         </div>
