Added label with instructions

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                     <input type="text" id="expense-title-input" name="title" placeholder="Description">
                     <input type="number" id="expense-amount-input" name="amount" placeholder="$0">
                     <div class="add-expense"><img src="icon/plus.png" alt=""></div>
+                    <div id="note"> <font size="2"
+                        face="verdana"
+                        color="gray"
+                        >
+                        **Note: If you write a positive number, it will be sum to your balance. If it is negative, it will be subtract it.
+                      </font></div>
                 </div>
               
             </div>
