--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="input2">
                     <form>
                         <input type="text" id="expense-title-input" name="title" placeholder="Description">
-                        <input type="number" id="expense-amount-input" name="amount">
+                        <input type="number" id="expense-amount-input" name="amount" placeholder="$0">
                     
 
                     <div class="add-expense"><img src="./icon/plus.png" alt="Send" onclick="postNewBalance()"></div>
@@ -51,7 +51,7 @@
                         face="verdana"
                         color="gray"
                         >
-                        **Note: If you write a positive number, it will be sum to your balance. If it is negative, it will be subtract it.
+                        **Note: If you write a positive number, it will be sumed to your balance. If it is negative, it will be subtracted.
                       </font></div>
                 </div>
               
